<resources>
    <string name="app_name">Your_Personal_Agenda_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_nav_home_title" />
    <string name="header_activity_logger">Agenda persoanala</string>
    <string name="menu_options_persoane">Persoane</string>
    <string name="menu_options_mancaruri">Mancaruri</string>
    <string name="menu_options_activitati">Activitati</string>
    <string name="menu_options_rapoarte">Rapoarte</string>
    <string name="menu_options_tutorial">Tutorial</string>
    <string name="menu_options_detalii">Detalii</string>
    <string name="btn_add_persoane_salvare">Salvare</string>
    <string name="chkbx_add_persoane_salveaza_preferinte">Salveaza preferinte</string>
    <string name="tiet_add_persoane_nume">Nume</string>
    <string name="tv_add_persoane_informatii_personale">Informatii personale</string>
    <string name="tiet_add_persoane_varsta">Varsta</string>
    <string name="rb_add_persoane_masculin">Masculin</string>
    <string name="rb_add_persoane_feminin">Feminin</string>
    <string name="tv_add_persoane_gen">Gen</string>
    <string name="tiet_add_persoane_greutate">Greutate (KG)</string>
    <string name="tiet_add_persoane_inaltime">Inaltime (CM)</string>
    <string name="btn_add_persoane_alege_data">Alege data</string>
    <string name="tv_add_persoane_ziua_luna_anul">Ziua/Luna/Anul</string>
    <string name="tv_add_mancaruri_informatii_masa">Informatii masa</string>
    <string name="tiet_add_mancaruri_descriere">Descriere</string>
    <string name="tv_add_mancaruri_felul_mesei">Felul mesei</string>
    <string name="tiet_add_mancaruri_gramaj">Gramaj (G)</string>
    <string name="tv_add_mancaruri_proteine">Proteine (G)</string>
    <string name="tv_add_mancaruri_carbohidrati">Carbohidrati (G)</string>
    <string name="tv_add_mancaruri_grasimi">Grasimi (G)</string>
    <string name="et_add_mancaruri_proteine">Proteine</string>
    <string name="et_add_mancaruri_carbohidrati">Carbohidrati</string>
    <string name="et_add_mancaruri_grasimi">Grasimi</string>
    <string name="tv_add_mancaruri_calorii">Calorii din zilnicul recomandat</string>
    <string name="tv_add_activitati_informatii_activitate">Informatii activitate</string>
    <string name="tiet_add_activitati_tip_activitate">Tip activitate</string>
    <string name="tv_add_activitati_durata_activitate">Durata activitate</string>
    <string name="tiet_add_activitati_calorii_arse">Calorii arse</string>
    <string name="tv_add_activitati_durata_ore">Ore</string>
    <string name="tv_add_activitati_minute">Minute</string>
    <string name="et_add_activitati_durata_ore">Ore</string>
    <string name="et_add_activitati_durata_minute">Minute</string>
    <string name="iv_lv_persoane_view_nume">Nume persoana</string>
    <string name="tv_lv_persoane_view_nume">Nume</string>
    <string name="iv_lv_persoane_view_data">Data</string>
    <string name="tv_lv_persoane_view_data">Data</string>
    <string name="iv_lv_persoane_view_gen">Gen</string>
    <string name="tv_lv_persoane_view_gen">Gen</string>
    <string name="iv_lv_persoane_view_varsta">Varsta</string>
    <string name="tv_lv_persoane_view_varsta">Varsta</string>
    <string name="iv_lv_persoane_view_greutate">Greutate</string>
    <string name="tv_lv_persoane_view_greutate">Greutate</string>
    <string name="tv_lv_persoane_view_inaltime">Inaltime</string>
    <string name="iv_lv_persoane_view_inaltime">Inaltime</string>
    <string name="tv_lv_mancaruri_view_descriere">Descriere</string>
    <string name="tv_mancaruri_view_fel">Fel</string>
    <string name="iv_lv_mancaruri_view_gramaj">Gramaj</string>
    <string name="tv_lv_mancaruri_view_gramaj">Gramaj</string>
    <string name="tv_lv_mancaruri_view_proteine_label">Proteine:</string>
    <string name="tv_lv_mancaruri_view_proteine">Proteine</string>
    <string name="tv_lv_mancaruri_view_carbohidrati_label">Carbohidrati:</string>
    <string name="tv_lv_mancaruri_view_carbohidrati">Carbohidrati</string>
    <string name="tv_lv_mancaruri_view_grasimi_label">Grasimi:</string>
    <string name="tv_lv_mancaruri_view_grasimi">Grasimi</string>
    <string name="tv_lv_mancaruri_view_calorii_label">Calorii:</string>
    <string name="tv_lv_mancaruri_view_calorii">Calorii</string>
    <string name="tv_lv_activitati_view_tip_activitate">Tip activitate</string>
    <string name="iv_lv_activitati_view_durata_ore">Ore</string>
    <string name="tv_lv_activitati_view_durata_ore">Ore</string>
    <string name="iv_lv_activitati_view_durata_minute">Minute</string>
    <string name="tv_lv_activitati_view_durata_minute">Minute</string>
    <string name="tv_lv_activitati_view_calorii_arse">Calorii arse</string>
    <string name="tv_lv_activitati_view_durata_ore_text">%1$d ore</string>
    <string name="tv_lv_activitati_view_durata_minute_text_peste20">%1$d de minute</string>
    <string name="tv_lv_activitati_view_durata_minute_text_sub20">%1$d minute</string>
    <string name="tv_lv_activitati_view_durata_minute_text_egal1">%1$d minut</string>
    <string name="tv_lv_mancaruri_view_macronutrienti_si_gramaj">%1$.2f g</string>
    <string name="tv_lv_persoane_view_varsta_diferit1">%1$d ani</string>
    <string name="tv_lv_persoane_view_varsta_egal1">%1$d an</string>
    <string name="tv_lv_persoane_view_greutate_text">%1$.2f kg</string>
    <string name="tv_lv_persoane_view_inaltime_text">%1$.2f cm</string>
    <string name="main_activity_option">Optiunea %1$s a fost apasata</string>
    <string name="add_persoane_data_pick_choice">%1$d/%2$d/%3$d</string>
    <string name="test_minus_sign">-</string>
    <string name="test_dot_sign">.</string>
    <string name="test_comma_sign">,</string>
    <string name="mancaruri_person_not_selected_message">Trebuie selectata o persoana pentru a-i afisa mesele</string>
    <string-array name="spn_add_mancaruri_fel">
        <item>Mic-Dejun</item>
        <item>Pranz</item>
        <item>Cina</item>
        <item>Gustare</item>
        <item>Altele</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_info_activity_descriere">Detalii aplicatie\n
        Nume aplicatie: Agenda Persoanala \n
        Membrii aplicatie: \n
        \t\t\t ->Sandulescu Razvan-Alexandru \n
        \t\t\t ->Stan Catalin-Mihai \n
        Aplicatia a fost realizata in urmatoarele etape: \n
        Ziua 1 \n
        \t\t\t ->Design \n
        \t\t\t ->meniu CHECK \n
        \t\t\t ->formulare CHECK \n
        Ziua 2 \n
        \t\t\t ->list-view adapter CHECK \n
        \t\t\t ->fragmente 3 CHECK \n
        \t\t\t ->main CHECK \n
       \t\t\t ->3 activitati CHECK \n
        \t\t\t ->Definim asynctask CHECK \n
        \t\t\t ->Definim clasele CHECK \n
       \t\t\t -> Definim adaptoarele pentru liste CHECK \n
        \t\t\t ->Definim parserele JSON CHECK \n
        \t\t\t ->Definim optiuni meniu deschidere CHECK \n
        Ziua 3 \n
        \t\t\t ->Definim validarile CHECK \n
        \t\t\t ->Implementare spinner si date picker CHECK \n
        \t\t\t ->Preluare JSON CHECK \n
        \t\t\t ->Implementam list-view-adapterele CHECK \n
        \t\t\t ->Implementare adaugare obiecte CHECK \n
        Ziua 4 \n
        \t\t\t ->Implementare modificare obiecte CHECK \n
        \t\t\t ->Implementare stergere obiecte CHECK \n
        \t\t\t ->Implementare preferinte CHECK \n
        \t\t\t ->Implementam tot in afara de BD CHECK \n
        \t\t\t ->Definim ROOM CHECK \n
        Ziua 5 \n
        \t\t\t ->Implementam ROOM CHECK \n
        \t\t\t ->Definim FIREBASE CHECK \n
        \t\t\t ->Implementam FIREBASE CHECK \n
        \t\t\t ->Definim rapoarte CHECK \n
        Ziua 6 \n
        \t\t\t ->Definim calorii cerc CHECK \n
        \t\t\t ->Definim splash activity CHECK \n
        \t\t\t ->Definim tutorial CHECK \n
        \t\t\t ->Definim info CHECK \n
        \t\t\t ->Stilizam aplicatia CHECK \n
        \t\t\t ->Documentatie CHECK \n
    </string>
    <string name="menu_option_firebase">Firebase</string>
</resources>